--- a/Commmunity.AspNetCore.ExceptionHandling/Commmunity.AspNetCore.ExceptionHandling.csproj
+++ b/Commmunity.AspNetCore.ExceptionHandling/Commmunity.AspNetCore.ExceptionHandling.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Response\" />
+  </ItemGroup>
+
 </Project>
