update repository name

--- a/Community.AspNetCore.ExceptionHandling/Community.AspNetCore.ExceptionHandling.csproj
+++ b/Community.AspNetCore.ExceptionHandling/Community.AspNetCore.ExceptionHandling.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netcoreapp2.1</TargetFrameworks>
     <Description>Middleware to configure exception handling policies. Configure chain of handlers per exception type. OOTB handlers: log, retry, set responce headers and body</Description>
-    <PackageProjectUrl>https://github.com/IharYakimush/AspNetCore</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/IharYakimush/AspNetCore/blob/develop/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/IharYakimush/asp-net-core-exception-handling</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/IharYakimush/asp-net-core-exception-handling/blob/develop/LICENSE</PackageLicenseUrl>
     <Copyright>IharYakimush</Copyright>
-    <PackageTags>AspNetCore exception handling policy</PackageTags>
+    <PackageTags>aspnetcore exception handling policy</PackageTags>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
