--- a/Community.AspNetCore.ExceptionHandling.NewtonsoftJson/Community.AspNetCore.ExceptionHandling.NewtonsoftJson.csproj
+++ b/Community.AspNetCore.ExceptionHandling.NewtonsoftJson/Community.AspNetCore.ExceptionHandling.NewtonsoftJson.csproj
@@ -5,9 +5,9 @@
     <Description>Extension methods to configure exception handler which write object serialized using Newtonsoft.Json serializer to responce body. In case of using netcore2.1+ use Commmunity.AspNetCore.ExceptionHandling.Mvc package instead</Description>
     <Authors>IharYakimush</Authors>
     <Copyright>IharYakimush</Copyright>
-    <PackageLicenseUrl>https://github.com/IharYakimush/AspNetCore/blob/develop/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/IharYakimush/AspNetCore</PackageProjectUrl>
-    <PackageTags>AspNetCore exception handling policy json response</PackageTags>
+    <PackageLicenseUrl>https://github.com/IharYakimush/asp-net-core-exception-handling/blob/develop/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/IharYakimush/asp-net-core-exception-handling</PackageProjectUrl>
+    <PackageTags>aspnetcore exception handling policy json response</PackageTags>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Version>2.0.0</Version>
     <Company />
