--- a/Community.AspNetCore.ExceptionHandling/Community.AspNetCore.ExceptionHandling.csproj
+++ b/Community.AspNetCore.ExceptionHandling/Community.AspNetCore.ExceptionHandling.csproj
@@ -7,18 +7,19 @@
     <PackageLicenseUrl>https://github.com/IharYakimush/asp-net-core-exception-handling/blob/develop/LICENSE</PackageLicenseUrl>
     <Copyright>IharYakimush</Copyright>
     <PackageTags>aspnetcore exception handling policy</PackageTags>
-    <AssemblyVersion>2.0.1.0</AssemblyVersion>
+    <AssemblyVersion>2.0.2.0</AssemblyVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <FileVersion>2.0.1.0</FileVersion>
+    <FileVersion>2.0.2.0</FileVersion>
     <Company />
     <Authors>IharYakimush</Authors>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\sgn.snk</AssemblyOriginatorKeyFile>
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
+    <PackageReleaseNotes>WithBody method changed to use Stream instead of StreamWriter to unify behaviour in case of buffered and chunked responses</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
