--- a/Community.AspNetCore.ExceptionHandling/Community.AspNetCore.ExceptionHandling.csproj
+++ b/Community.AspNetCore.ExceptionHandling/Community.AspNetCore.ExceptionHandling.csproj
@@ -27,8 +27,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
